--- a/journal-writings/original/12-chapter-10.adoc
+++ b/journal-writings/original/12-chapter-10.adoc
@@ -1,13 +1,12 @@
 == Chapter X.
 
-His exercise for the good of the people in the West Indies--Communicates to Friends
-his resignation to visit some of these islands--The state of his mind,
-and the close considerations he was led into while
-under this exercise--Preparations to embark,
-and considerations on the trade to these islands;
-released from the concern he had been under--Religious
-engagements after his return home--His sickness,
-in which he was brought to a very low state; and the prospects he then had.
+[.chapter-synopsis]
+* His exercise for the good of the people in the West Indies
+* Communicates to Friends his resignation to visit some of these islands
+* The state of his mind, and the close considerations he has led into while under this exercise
+* Preparations to embark, and considerations on the trade to these islands; released from the concern he had been under
+* Religious engagements after his return home
+* His sickness, in which he was brought to a very low state; and the prospects he then had
 
 The 12th day of the third month, 1770, having for some years past,
 dieted myself on account of a lump gathering on my nose, I grew weak in body,
