--- a/journal-writings/original/11-chapter-9.adoc
+++ b/journal-writings/original/11-chapter-9.adoc
@@ -1,25 +1,16 @@
 == Chapter IX.
 
-His religious conversation with a company met to
-see the tricks of a juggler--John Smith`'s advice;
-proceedings of a committee at the Yearly Meeting in
-1764--Contemplations on the nature of true wisdom,
-occasioned by hearing of the cruelty of the Indians to their
-captives--Visits the families of Friends at Mount Holly,
-Mansfield and Burlington, in 1764,
-and the meetings on the sea coast from Cape May toward Squan in 1765--Visit
-to the lower counties on Delaware and the Eastern Shore of Maryland in 1766,
-in company with John Sleeper; some account of Joseph Nichols and his followers;
-and observations on the different state of the first settlers
-in Pennsylvania who depended on their own labour,
-and those of the Southern provinces who kept negroes--
-Visit to the northern parts of New Jersey the same year,
-and the western parts of Maryland and Pennsylvania in 1767,
-and afterwards other parts of Pennsylvania and the families of Friends at Mount Holly;
-and again several parts of Maryland in 1768--Further considerations on keeping slaves;
-his concern for having formerly, as an executor, been party to the sale of one;
-and what he did in consequence of it--Thoughts on
-Friends exercising offices in civil government.
+[.chapter-synopsis]
+* His religious conversation with a company met to see the tricks of a juggler
+* John Smith`'s advice; proceedings of a committee at the Yearly Meeting in 1764
+* Contemplations on the nature of true wisdom, occasioned by hearing of the cruelty of the Indians to their captives
+* Visits the families of Friends at Mount Holly, Mansfield and Burlington, in 1764, and the meetings on the sea coast from Cape May toward Squan in 1765
+* Visit to the lower counties on Delaware and the Eastern Shore of Maryland in 1766, in company with John Sleeper
+* Some account of Joseph Nichols and his followers
+* Observations on the different state of the first settlers in Pennsylvania who depended on their own labor, and those of the Southern provinces who kept negroes
+* Visit to the northern parts of New Jersey the same year, and the western parts of Maryland and Pennsylvania in 1767, and afterwards other parts of Pennsylvania and the families of Friends at Mount Holly; and again several parts of Maryland in 1768
+* Further considerations on keeping slaves; his concern for having formerly, as an executor, been party to the sale of one; and what he did in consequence of it
+* Thoughts on Friends exercising offices in civil government
 
 The latter part of the summer 1763, there came a man to Mount Holly,
 who had before published by a printed advertisement,
