--- a/journal-writings/original/13-chapter-11.adoc
+++ b/journal-writings/original/13-chapter-11.adoc
@@ -1,12 +1,12 @@
-== Chapter XI.
+== Chapter XI
 
-Preparing to visit Friends in England--Embarks at Chester, in company with Samuel Emlen,
-in a ship bound to London--His deep exercise,
-in observing the difficulties and hardships the common sailors are exposed
-to--Considerations on the dangers to which youth are exposed,
-in being trained to a sea-faring life;
-and its inconsistency with a pious education--Thoughts in a storm at sea;
-with many instructive contemplations on the voyage--Arrival at London.
+[.chapter-synopsis]
+* Preparing to visit Friends in England
+* Embarks at Chester, in company with Samuel Emlen, in a ship bound to London
+* His deep exercise, in observing the difficulties and hardships the common sailors are exposed to
+* Considerations on the dangers to which youth are exposed, in being trained to a sea-faring life; and its inconsistency with a pious education
+* Thoughts in a storm at sea; with many instructive contemplations on the voyage
+* Arrival at London
 
 Having been some time under a religious concern to prepare for crossing the seas,
 in order to visit Friends in the Northern parts of England,
