--- a/journal-writings/original/15-keeping-negroes.adoc
+++ b/journal-writings/original/15-keeping-negroes.adoc
@@ -1,8 +1,11 @@
-== Considerations on the Keeping of Negroes; Recommended to the Professors of Christianity of Every Denomination.
 
-First Printed In The Year 1754.
+[#negroes, short="Considerations on the Keeping of Negroes"]
+== Considerations on the Keeping of Negroes - Part 1 / Recommended to the Professors of Christianity of Every Denomination
 
-=== Introduction.
+[.chapter-subtitle--blurb]
+First Printed in the Year 1754
+
+=== Introduction
 
 Customs generally approved, and opinions received by youth from their superiors,
 become like the natural produce of a soil,
@@ -72,9 +75,12 @@ the candid amongst them may easily do the subject such further justice,
 as on an impartial inquiry it may appear to deserve;
 and such an inquiry I would earnestly recommend.
 
-=== Considerations, etc.
+=== Considerations on Keeping Negroes - Part I
 
-"`Forasmuch as ye did it to the least of these my brethren, ye did it unto me.`" Matt. 25:40.
+[quote.scripture, , Matt. 25:40]
+____
+"`'`Forasmuch as you did it to the least of these my brethren, you did it unto me.`"
+____
 
 As many times there are different motives to the same action;
 and one does that from a generous heart, which another does for selfish ends;
@@ -506,18 +512,22 @@ that they would consider their latter end!`"
 
 [.asterism]
 '''
+//^^Do you still want this here? It's in the modernized too.
 
-=== Considerations on the Keeping of Negroes; Recommended to the Professors of Christianity of Every Denomination.
+[.old-style]
+=== Considerations on the Keeping of Negroes - Part 2 / Recommended to the Professors of Christianity of Every Denomination
 
-Part the Second.
+[quote.scripture, , Deut. 1:17]
+____
+"`You shall not respect persons in judgment;
+but you shall hear the small as well as the great:
+you shall not be afraid of the face of man; for the judgment is God`'s.`"
+____
 
-First Printed in the Year 1762.
+[.chapter-subtitle--blurb]
+First Printed in the Year 1762
 
-"`Ye shall not respect persons in judgment;
-but ye shall hear the small as well as the great:
-ye shall not be afraid of the face of man; for the judgment is God`'s.`" Duet. 1:17.
-
-=== Preface.
+=== Preface
 
 All our actions are of like nature with their root;
 and the Most High weigheth them more skilfully than men can weigh them one for another.
@@ -1318,13 +1328,9 @@ and the desire of revenge frequently excited on the other,
 till the inhabitants of the land are ripe for great commotion and trouble;
 and thus luxury and oppression have the seeds of war and desolation in them.
 
-[.asterism]
-'''
-
 Some account of the slave-trade,
 from the writings of persons who have been at the places where they are first purchased,
 viz.
-
 Bosman on Guinea, who was a factor for the Dutch about sixteen years in that country,
 (page 339) thus remarks: "`But since I have so often mentioned that commerce,
 I shall describe how it is managed by our factors.
@@ -1396,6 +1402,7 @@ which some of their nation carried off.`"
 
 Extracts from a collection of voyages.
 Vol. 1.
+//Does this need to be a sub heading?
 
 The author, a popish missionary,
 speaking of his departing from the negro country to Brazil, saith,
@@ -1791,6 +1798,3 @@ that wickedness takes root and spreads wide amongst the inhabitants of a country
 there is real cause for sorrow to all such,
 whose love to mankind stands on a true principle,
 and who wisely consider the end and event of things.
-
-[.asterism]
-'''
