--- a/journal-writings/original/17-harmony.adoc
+++ b/journal-writings/original/17-harmony.adoc
@@ -1,12 +1,17 @@
-== Considerations on the True Harmony of Mankind; And How It Is To Be Maintained.
 
-First Printed In The Year 1770.
+[#harmony, short="Considerations on the Harmony of Mankind"]
+== Considerations on the True Harmony of Mankind, and How It Is To Be Maintained
 
+[.chapter-subtitle--blurb]
+First Printed in the Year 1770
+
+[quote.scripture, , Micah 5:7]
+____
 "`And the remnant of Jacob shall be in the midst of many people, as a dew from the Lord,
-as the showers upon the grass, that tarrieth not for man,
-nor waiteth for the sons of men.`" Micah 5:7.
+as the showers upon the grass, that tarries not for man, nor waits for the sons of men.`"
+____
 
-=== Introduction.
+=== Introduction
 
 As mankind, though descended from one parent, are divided into many families,
 and as trading to sea is greatly increased within a few ages past;
@@ -20,9 +25,8 @@ the spreading of the true and saving knowledge of God and of his son Jesus Chris
 amongst our fellow creatures, which through his infinite love,
 some feel to be more precious than any other treasure.
 
-=== Considerations On True Harmony.
-
-=== Chapter I. / On serving the Lord in our outward employments.
+[.old-style]
+=== Chapter I. / On serving the Lord in our outward employments
 
 Under the humbling dispensations of the Father of mercies,
 I have felt an inward labour for the good of my fellow creatures,
@@ -259,7 +263,8 @@ and members of Christ; be ashamed therefore to think, speak, or do any thing uns
 for God`'s children and the members of Christ.`"
 Fox`'s Acts and Monuments, page 1177.
 
-=== Chapter II.On the example of Christ.
+[.old-style]
+=== Chapter II. / On the Example of Christ
 
 My mind has been brought into a brotherly feeling with the poor,
 as to the things of this life,
@@ -379,7 +384,8 @@ that the wisdom from above may shine forth in their living,
 as a light by which others may be instrumentally helped on their way,
 in the true harmonious walking.
 
-=== Chapter III.On Merchandising.
+[.old-style]
+=== Chapter III. / On Merchandising
 
 Where the treasures of pure love are opened,
 and we obediently follow Him who is the light of life, the mind becomes chaste;
@@ -647,7 +653,8 @@ O that we may lay to heart the condition of the present time,
 and humbly follow His counsel,
 who alone is able to prepare the way for a true harmonious walking amongst mankind.
 
-=== Chapter IV. Divine admonitions.
+[.old-style]
+=== Chapter IV. / On Divine Admonitions
 
 Such are the perfections of our heavenly Father,
 that in all the dispensations of his providence, it is our duty, "`in everything,
