--- a/journal-writings/original/18-remarks.adoc
+++ b/journal-writings/original/18-remarks.adoc
@@ -1,8 +1,10 @@
-== Remarks On Sundry Subjects.
+== Remarks on Sundry Subjects
 
-First Printed In London, 1773.
+[.chapter-subtitle--blurb]
+First Printed in the Year 1773
 
-=== Chapter I.On Loving our Neighbours As Ourselves.
+[.old-style]
+=== Chapter I. / On Loving Our Neighbors As Ourselves.
 
 When we love the Lord with all our hearts, and his creatures in his love,
 we are then preserved in tenderness both toward mankind and the animal creation;
@@ -640,7 +642,8 @@ in the prosecution of a suit brought to recover their
 value from the insurers--the result of which however,
 was, that the loss was adjudged to fall upon the owners.
 
-"`The case of the Rodeur, captain B+++_______+++ , a French vessel of two hundred tons burden,
+"`The case of the Rodeur, captain B+++_______+++ , a French vessel of two hundred
+tons burden,
 is remarkable.
 
 She left Havre for the coast of Africa, where she arrived and anchored before Bonny,
@@ -891,6 +894,7 @@ in no small degree in the guilt of the traffic,
 it being well ascertained that American vessels, American capital and American citizens,
 are employed in its prosecution.
 -End of Editor`'s note.]
+//Does this note ^^ need to be signified at the beginning of it?
 
 Thus it appears evident,
 that great numbers of these people are brought every year to an untimely end;
@@ -1233,7 +1237,8 @@ and I often feel tender compassion toward a young generation,
 with desires that their difficulties may not be increased
 through unfaithfulness in us of the present age.
 
-=== Chapter II.On a Sailor`'s life.
+[.old-style]
+=== Chapter II. / On a Sailor`'s life.
 
 In the trade to Africa for slaves, and in the management of ships going on these voyages,
 many of our lads and young men have a considerable part of their education.
@@ -1354,7 +1359,8 @@ while they who live in these customs are so
 entangled in a multitude of unnecessary concerns,
 that they think but little of the hardships which the poor people go through.
 
-=== Chapter III.On Silent Worship.
+[.old-style]
+=== Chapter III. / On Silent Worship
 
 Worship in silence hath often been refreshing to my mind,
 and a care attends me that a young generation may feel the nature of this worship.
