--- a/journal-writings/original/19-epistle.adoc
+++ b/journal-writings/original/19-epistle.adoc
@@ -1,6 +1,8 @@
 == An Epistle to the Quarterly and Monthly Meetings of Friends.
 
+[.salutation]
 Beloved Friends,
+
 Feeling at this time a renewed concern that the pure Spirit of light and life,
 and the righteous fruits thereof, may spread and prevail amongst mankind,
 there is an engagement on my heart to labour with my brethren in religious profession,
@@ -94,11 +96,15 @@ who fails not to grant that which his own Spirit, through his children,
 asketh;--thus preservation from sin is known,
 and the fruits of righteousness are brought forth by such who inwardly unite in prayer.
 
+[quote, Robert Barclay, Apology, p. 404]
+____
+
 How weighty are our solemn meetings when the name of Christ is
 kept holy! "`How precious is that state in which the children
 of the Lord are so redeemed from the love of this world,
 that they are accepted and blessed in all that they do.`"
-R+++.+++ Barclay`'s Apology, p. 404.
+____
+//Not sure if this is right or okay!!!! But I saw it and it looked like a block quote. :) I didn't change it in the modernized. I figured I wait to see what you say. 
 
 How necessary is it that we who profess these principles,
 and are active in supporting them, should faithfully abide in Divine strength,
@@ -496,6 +502,8 @@ and desires from the fountain of pure love are opened in me,
 to invite my brethren and fellow creatures to feel for,
 and seek after that which gathers the mind into it.
 
+[.signed-section-signature]
 John Woolman.
 
+[.signed-section-context-close]
 Mount Holly, New Jersey, Fourth month, 1772.
