--- a/journal-writings/original/06-chapter-4.adoc
+++ b/journal-writings/original/06-chapter-4.adoc
@@ -386,7 +386,7 @@ as follows:
 --
 
 [.letter-heading]
-To Friends at their Monthly Meeting at New Garden and Cane creek, in North Carolina.
+To Friends at their Monthly Meeting at New Garden and Cane Creek, in North Carolina.
 
 [.salutation]
 Dear Friends,
@@ -492,7 +492,6 @@ for he is a strong hold in the day of trouble, and knoweth them that trust in hi
 
 [.signed-section-context-close]
 Isle of Wight county, in Virginia, 29th of the Fifth month, 1757.
-//This also different than the modernized...one of the lines near the end is in a different  paragraph. Also, in the original PDF, his name isn't there so I left as it is in the original.
 
 --
 
