update spelling: Barbadoes > Barbados

--- a/journal-writings/original/12-chapter-10.adoc
+++ b/journal-writings/original/12-chapter-10.adoc
@@ -49,7 +49,7 @@ our having sold a negro lad till he might attain the age of thirty years,
 was now the occasion of great sorrow to me.
 After having settled matters relating to this youth, I provided seastores, a bed,
 and other things for the voyage;
-and hearing of a vessel likely to sail from Philadelphia for Barbadoes,
+and hearing of a vessel likely to sail from Philadelphia for Barbados,
 I spoke with one of the owners at Burlington,
 and soon after went to Philadelphia on purpose to speak with him again.
 He told me there was a Friend in town who was part owner of the said vessel;
@@ -59,7 +59,7 @@ had some weighty conversation with the first-mentioned owner, and showed him a w
 as follows:
 
 "`On the 25th day of the eleventh month, 1769.
-As an exercise, with respect to a visit to Barbadoes, hath been weighty on my mind,
+As an exercise, with respect to a visit to Barbados, hath been weighty on my mind,
 I may express some of the trials which have attended me, under which,
 I have at times rejoiced that I have felt my own self-will subjected.
 
@@ -75,7 +75,7 @@ and feeling an increasing concern to be wholly
 given up to the leadings of the Holy Spirit,
 it hath appeared to me, that the small gain I got by this branch of trade,
 should be applied in promoting righteousness on the earth;
-and was the first motion toward a visit to Barbadoes.
+and was the first motion toward a visit to Barbados.
 I believed the outward substance I possess should be applied in paying my passage,
 if I go, and providing things in a lowly way for my subsistence;
 but when the time drew near, in which I believed it required of me to be in readiness,
