update spellings: skilful/wilful > skillful/willful

--- a/journal-writings/original/10-chapter-8.adoc
+++ b/journal-writings/original/10-chapter-8.adoc
@@ -541,7 +541,7 @@ After a hard day`'s journey, I was brought into a painful exercise at night,
 in which I had to trace back and view over the steps I
 had taken from my first moving in the visit;
 and though I had to bewail some weakness which at times had attended me,
-yet I could not find that I had ever given way to a wilful disobedience.
+yet I could not find that I had ever given way to a willful disobedience.
 As I believed I had under a sense of duty come thus far,
 I was now earnest in spirit beseeching the Lord to show me what I ought to do.
 In this great distress I grew jealous of myself, lest the desire of reputation,
