--- a/journal-writings/original/11-chapter-9.adoc
+++ b/journal-writings/original/11-chapter-9.adoc
@@ -233,7 +233,7 @@ that were now his followers, and were become sober well behaved men and women.
 
 Some irregularities I hear have been amongst the people at several of his meetings;
 but from the whole of what I have perceived, I believe the man and some of his followers,
-are honestly disposed, but that skilful fathers are wanting among them:
+are honestly disposed, but that skillful fathers are wanting among them:
 from hence we went to Choptank and Third Haven;
 and thence to Queen Ann`'s. The weather for some days past having been hot and dry,
 and in order to attend meetings pursuant to appointment,
