--- a/journal-writings/original/15-keeping-negroes.adoc
+++ b/journal-writings/original/15-keeping-negroes.adoc
@@ -520,7 +520,7 @@ ye shall not be afraid of the face of man; for the judgment is God`'s.`" Duet. 1
 === Preface.
 
 All our actions are of like nature with their root;
-and the Most High weigheth them more skilfully than men can weigh them one for another.
+and the Most High weigheth them more skillfully than men can weigh them one for another.
 
 I believe that one Supreme Being made and supports the world;
 nor can I worship any other Deity without being an idolater, and guilty of wickedness.
