update spelling: fulfil > fulfill

--- a/journal-writings/original/05-chapter-3.adoc
+++ b/journal-writings/original/05-chapter-3.adoc
@@ -181,7 +181,7 @@ completion of those prophecies already begun,
 that "`nation shall not lift up a sword against nation, nor learn war any more.`"
 
 And, dearly beloved friends, seeing we have these promises,
-and believe that God is beginning to fulfil them,
+and believe that God is beginning to fulfill them,
 let us constantly endeavour to have our minds sufficiently
 disentangled from the surfeiting cares of this life,
 and redeemed from the love of the world,
