--- a/journal-writings/original/15-keeping-negroes.adoc
+++ b/journal-writings/original/15-keeping-negroes.adoc
@@ -132,7 +132,7 @@ yet remembered they were the chosen people of God; and could say,
 That this was no chance language, but their common opinion of other people,
 more fully appears,
 by considering the circumstances which attended when God was beginning to
-fulfil his precious promises concerning the gathering of the Gentiles.
+fulfill his precious promises concerning the gathering of the Gentiles.
 
 The Most High, in a vision undeceived Peter, first prepared his heart to believe,
 and at the house of Cornelius showed him of a
