update/standardize <adjective>-minded

--- a/journal-writings/modernized/06-chapter-4.adoc
+++ b/journal-writings/modernized/06-chapter-4.adoc
@@ -644,7 +644,7 @@ there were some hopeful young people in those parts.
 I had meetings at John Everit`'s in Monallen, and at Huntingdon;
 and was made humbly thankful to the Lord,
 who opened my heart among the people in these new settlements,
-so that it was a time of encouragement to the honest minded.
+so that it was a time of encouragement to the honest-minded.
 
 At Monallen, a Friend gave me some account of a religious society, among the Dutch,
 called Mennonists; and among other things, related a passage in substance as follows:
