--- a/journal-writings/modernized/07-chapter-5.adoc
+++ b/journal-writings/modernized/07-chapter-5.adoc
@@ -186,7 +186,7 @@ and in the execution of their office,
 when they have men to deal with whom they believe to be upright-hearted,
 to put them to trouble on account of scruples of conscience, is a painful task,
 and likely to be avoided as much as easily may be.
-But where men profess to be so meek and heavenly minded,
+But where men profess to be so meek and heavenly-minded,
 and to have their trust so firmly settled in God, that they cannot join in wars; and yet,
 by their spirit and conduct in common life, manifest a contrary disposition,
 their difficulties are great at such a time.
