--- a/journal-writings/modernized/08-chapter-6.adoc
+++ b/journal-writings/modernized/08-chapter-6.adoc
@@ -130,7 +130,7 @@ I bore him company in the said visit to some active members,
 and found inward satisfaction.
 
 At our Yearly Meeting in the year 1759, we had some weighty seasons,
-where the power of Truth was largely extended, to the strengthening of the honest minded.
+where the power of Truth was largely extended, to the strengthening of the honest-minded.
 As Friends read over the epistles to be sent to the Yearly Meetings on this continent,
 I observed in most of them, both this year and last,
 that it was recommended to Friends to labor against buying and keeping slaves;
