--- a/journal-writings/modernized/09-chapter-7.adoc
+++ b/journal-writings/modernized/09-chapter-7.adoc
@@ -12,7 +12,7 @@ by a previous agreement, with my beloved friend Samuel Eastburn.
 We had meetings at Woodbridge, Rahway and Plainfield;
 and were at their Monthly Meeting of ministers and elders in Rahway.
 We labored under some discouragement; but through the invisible power of Truth,
-our visit was made reviving to the lowly minded, with whom I felt a near unity of spirit,
+our visit was made reviving to the lowly-minded, with whom I felt a near unity of spirit,
 being much reduced in my mind.
 
 We passed on and visited most of the meetings on Long Island.
