--- a/journal-writings/modernized/16-various-subjects.adoc
+++ b/journal-writings/modernized/16-various-subjects.adoc
@@ -446,7 +446,7 @@ and an engagement to labor according to the gift bestowed on me, for promoting a
 plain, temperate way of living:
 a life where no unnecessary cares or expenses may encumber our minds,
 or lessen our ability to do good; where no desires after riches,
-or greatness may lead into hard dealing; where no connections with worldly minded men,
+or greatness may lead into hard dealing; where no connections with worldly-minded men,
 may abate our love to God, or weaken a true zeal for righteousness:
 a life wherein we may diligently labor for resignedness to do
 and suffer whatever our heavenly Father may allot for us,
