--- a/journal-writings/original/11-chapter-9.adoc
+++ b/journal-writings/original/11-chapter-9.adoc
@@ -56,7 +56,7 @@ though not eloquent, stood up in our meeting of ministers and elders,
 and appearing to be under a great exercise of spirit,
 informed Friends in substance as follows, to wit:
 "`That he had been a member of the Society upward of sixty years,
-and well remembered that in those early times Friends were a plain lowly minded people;
+and well remembered that in those early times Friends were a plain lowly-minded people;
 and that there was much tenderness and contrition in
 their meetings.--That at twenty years from that time,
 the Society increasing in wealth,
