--- a/journal-writings/original/19-epistle.adoc
+++ b/journal-writings/original/19-epistle.adoc
@@ -449,7 +449,7 @@ and that blessing felt, in which is real safety;
 this is what I apprehend our blessed Lord had in view, when he pronounced,
 "`Blessed are the meek, for they shall inherit the earth.`"
 
-Selfish worldly minded men may hold lands in the selfish spirit,
+Selfish worldly-minded men may hold lands in the selfish spirit,
 and depending on the strength of outward power, may be perplexed with secret uneasiness,
 lest the injured should at sometime overpower them, and that measure be meted to them,
 which they measure to others.
