fix ocr scan errors

--- a/journal-writings/original/04-chapter-2.adoc
+++ b/journal-writings/original/04-chapter-2.adoc
@@ -368,7 +368,7 @@ and was an instrument of the greatest use.
 Finding a concern to visit Friends in the lower counties on Delaware,
 and on the Eastern Shore of Maryland,
 and having an opportunity to join with my well-beloved ancient friend John Sykes,
-we obtained certificates, and set ofT the 7th day of the eighth month, in the year 1748;
+we obtained certificates, and set off the 7th day of the eighth month, in the year 1748;
 were at the meetings of Friends in the lower counties,
 attended the Yearly Meeting at Little Creek,
 and made a visit to most of the meetings on the Eastern Shore;
