fix unspaced periods

--- a/journal-writings/modernized/09-chapter-7.adoc
+++ b/journal-writings/modernized/09-chapter-7.adoc
@@ -354,7 +354,8 @@ a meeting was appointed, in which the Friend who first moved it,
 and who had been much shut up before, was largely opened in the love of the Gospel.
 The next morning about break of day, going again on board the vessel,
 we reached Falmouth on the main before night; where our horses being brought,
-we proceeded toward Sandwich Quarterly Meeting.Being two days in going to Nantucket,
+we proceeded toward Sandwich Quarterly Meeting.
+Being two days in going to Nantucket,
 and having been there once before, I observed many shoals in their bay,
 which make sailing more dangerous, especially in stormy nights; also, that a great shoal,
 which encloses their harbor, prevents their going in with sloops,
