--- a/journal-writings/modernized/17-harmony.adoc
+++ b/journal-writings/modernized/17-harmony.adoc
@@ -26,7 +26,7 @@ among our fellow creatures, which through his infinite love,
 some feel to be more precious than any other treasure.
 
 [.old-style]
-=== Chapter I. / On serving the Lord in our outward employments.
+=== Chapter I / On serving the Lord in our outward employments.
 
 Under the humbling dispensations of the Father of mercies,
 I have felt an inward labor for the good of my fellow creatures,
@@ -262,7 +262,7 @@ think, speak, or do anything unseemly, for God`'s children and the members of Ch
 Fox`'s Acts and Monuments, page 1177.
 
 [.old-style]
-=== Chapter II. / On the Example of Christ.
+=== Chapter II / On the Example of Christ.
 
 My mind has been brought into a brotherly feeling with the poor,
 as to the things of this life,
@@ -379,7 +379,7 @@ as a light by which others may be instrumentally helped on their way,
 in the true harmonious walking.
 
 [.old-style]
-=== Chapter III. / On Merchandising.
+=== Chapter III / On Merchandising.
 
 Where the treasures of pure love are opened,
 and we obediently follow Him who is the light of life, the mind becomes chaste;
@@ -642,7 +642,7 @@ and humbly follow His counsel,
 who alone is able to prepare the way for a true harmonious walking among mankind.
 
 [.old-style]
-=== Chapter IV. / On Divine Admonitions.
+=== Chapter IV / On Divine Admonitions.
 
 Such are the perfections of our heavenly Father,
 that in all the dispensations of his providence, it is our duty, "`in everything,
