--- a/journal-writings/original/18-remarks.adoc
+++ b/journal-writings/original/18-remarks.adoc
@@ -2,7 +2,8 @@
 
 First Printed In London, 1773.
 
-=== Chapter I.On Loving our Neighbours As Ourselves.
+[.old-style]
+=== Chapter I / On Loving our Neighbours As Ourselves.
 
 When we love the Lord with all our hearts, and his creatures in his love,
 we are then preserved in tenderness both toward mankind and the animal creation;
@@ -1233,7 +1234,8 @@ and I often feel tender compassion toward a young generation,
 with desires that their difficulties may not be increased
 through unfaithfulness in us of the present age.
 
-=== Chapter II.On a Sailor`'s life.
+[.old-style]
+=== Chapter II / On a Sailor`'s life.
 
 In the trade to Africa for slaves, and in the management of ships going on these voyages,
 many of our lads and young men have a considerable part of their education.
@@ -1354,7 +1356,8 @@ while they who live in these customs are so
 entangled in a multitude of unnecessary concerns,
 that they think but little of the hardships which the poor people go through.
 
-=== Chapter III.On Silent Worship.
+[.old-style]
+=== Chapter III / On Silent Worship.
 
 Worship in silence hath often been refreshing to my mind,
 and a care attends me that a young generation may feel the nature of this worship.
