fix mid-word non-letter scan errors

--- a/journal-writings/original/02-testimony-burlington.adoc
+++ b/journal-writings/original/02-testimony-burlington.adoc
@@ -9,7 +9,7 @@ even in his young years, tending to preserve him from the infection of wicked ch
 But through the workings of the enemy, and the levity incident to youth,
 he frequently deviated from those parental precepts,
 by which he laid a renewed foundation for repentance,
-that v/as finally succeeded by a godly sorrow not to be repented of,
+that was finally succeeded by a godly sorrow not to be repented of,
 and so became acquainted with that sanctifying
 power which qualifies for true Gospel ministry,
 into which he was called about the twenty-second year of his age,
